themes/trackfellas/source/css/_trackfellas.scss
/* ... */
.divider {
    height: 1px;
    border-right: 1px solid white;
    padding: 0 0 0 0;
    margin: 0 .5rem;
    font-size: .55rem;
}

.footer {
    margin: .8rem;
    padding: 0;
    li {
        display: inline;
        padding: 0 0 0 0;
        font-size: .85rem;
    }

    @extend .normal-content
}

footer {
    background: $nikabraun;
    color: white;
    padding: 1rem 0 1rem 0;
    a {
        color: white;
    }
    a:hover {
        color: white;
        padding-bottom: .3rem;
        border-bottom: 1px solid white;
    }
}

strong {
    font-family: RobotoRegular;
    font-size: 1.25;
}

#logo {
    margin: 0 0 0 0;
    height: 5rem;
}

.nav-wrapper {
    min-width: 100%;
    background: rgba(255, 255, 255, 0.85);
}

.top-bar-section {
    margin: 0 0 0 0;
}

.top-bar-section li:not(.has-form) a:not(.button):hover {
    background-color: #555555;
    background: transparent;
    padding-bottom: -10px;
    border-bottom: 1px solid $rot;
}

// Index page
.line-dark {
    text-transform: uppercase;
    padding-bottom: 0.625rem;
    border-bottom: 1px solid $nikagrau;
    margin-bottom: 2.5rem;
}

.line-light {
    text-transform: uppercase;
    padding-bottom: 0.625rem;
    border-bottom: 1px solid $white;
    margin-bottom: 2.5rem;
}

#about h3 {
    color: $nikagrau;
}

#team h2, h3, h4 {
    color: $white;
}

#signup {
    background: $rot;
}

.white {
    color: $white;
}

#signup h2, h3 {
    color: $white;
}

#team {
    background: $blau;
}

.teampic {
    height: 12rem;
    width: 12rem;
    margin-bottom: 1.25rem;
    border-radius: 80%;
}

.routepic {
    margin: 1rem auto;
    width: 11rem;
    border-radius: 80%;
    border: 3px solid white;
}

.social-team {
    height: 1.5rem;
    width: auto;
}

.social {
    margin-bottom: -16px;
    height: 1.8rem;
    width: auto;
}

.sma {
    height: 6rem;
    width: 6rem;
}

#stoerer {
    margin-top: -50%;
    margin-left: 70%;
    height: 5.5rem;
    width: auto;
}

.content-div {
    padding-bottom: 3.75rem;
}

.entry {
    padding-bottom: 1rem;
}

.blogpic {
    max-width: 8rem;
    height: 8rem;
}

// other special pages:
.accordion-overview {
    @extend .accordion-navigation
}

.accordion .accordion-overview > a {
    background: $braun;
    color: #fff;
    display: block;
    padding: 1rem;
}

.impressum {
    padding-top: 0rem;
    h2 {
        font-size: 1.5rem;
        text-align: left;
    }
    h1 {
        margin-bottom: 2rem;
    }
}

// Ridiculously Responsive Social Sharing Buttons
// Team: @dbox, @joshuatuscan
// Site: http://www.kurtnoble.com/labs/rrssb
// Twitter: @therealkni

//        ___           ___
//       /__/|         /__/\        ___
//      |  |:|         \  \:\      /  /\
//      |  |:|          \  \:\    /  /:/
//    __|  |:|      _____\__\:\  /__/::\
//   /__/\_|:|____ /__/::::::::\ \__\/\:\__
//   \  \:\/:::::/ \  \:\~~\~~\/    \  \:\/\
//    \  \::/~~~~   \  \:\  ~~~      \__\::/
//     \  \:\        \  \:\          /__/:/
//      \  \:\        \  \:\         \__\/
//       \__\/         \__\/

// How to use: Add/remove buttons from config settings and $social-list.

// Config settings
$rrssb-txt: #fff !default;
$rrssb-email: #0a88ff !default;
$rrssb-facebook: #306199 !default;
$rrssb-tumblr: #32506d !default;
$rrssb-linkedin: #007bb6 !default;
$rrssb-twitter: #26c4f1 !default;
$rrssb-googleplus: #e93f2e !default;
$rrssb-reddit: #8bbbe3 !default;
$rrssb-youtube: #df1c31 !default;
$rrssb-pinterest: #b81621 !default;
$rrssb-pocket: #ED4054 !default;
$rrssb-github: #444 !default;
$rrssb-instagram: #517fa4 !default;

// Set the border radius for the buttons
$rrssb-border-radius: 2px !default;

$rrssb-main-font: "Helvetica Neue", Helvetica, Arial, sans-serif !default;

// Variable list for all social button colors to be iterated over.
$social-list: (
    rrssb-email $rrssb-email,
    rrssb-facebook $rrssb-facebook,
    rrssb-tumblr $rrssb-tumblr,
    rrssb-linkedin $rrssb-linkedin,
    rrssb-twitter $rrssb-twitter,
    rrssb-googleplus $rrssb-googleplus,
    rrssb-youtube $rrssb-youtube,
    rrssb-reddit $rrssb-reddit,
    rrssb-pinterest $rrssb-pinterest,
    rrssb-pocket $rrssb-pocket,
    rrssb-github $rrssb-github,
    rrssb-instagram $rrssb-instagram
);

@mixin transition($expression) {
    -webkit-transition: $expression;
    -moz-transition: $expression;
    -o-transition: $expression;
    transition: $expression;
}

%backface-visibility {
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    -ms-backface-visibility: hidden;
}

%border-box {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

// some generic classes
.clearfix {
    *zoom: 1;

    &:after {
        clear: both;
    }

    &:before,
    &:after {
        content: " ";
        display: table;
    }
}
/* ... */

